# trading_engine

./: .dockerignore  .env.example  .gitignore  DECISION_ENGINE_IMPLEMENTATION_REPORT.md  Dockerfile  EXECUTION_ENGINE_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_AUDIT_REPORT.md  IMPLEMENTATION_COMPLETION_REPORT.md  INTEGRATION_REPORT.md  INTEGRATION_SUCCESS.md  LOGGING.md  Makefile  NOTIFICATION_SYSTEM_README.md  POSITION_MONITORING_IMPLEMENTATION.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  SOLANA_IMPLEMENTATION.md  SOLANA_STATUS.md  STORAGE_INTEGRATION_GUIDE.md  STORAGE_LAYER_REPORT.md  STORAGE_SUMMARY.md  deploy.config.example.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_implementation.py  test_notification_demo.py  test_notification_standalone.py  test_notifications_final.py  test_position_monitoring.py  test_simple.py  test_storage_integration.py  test_storage_simple.py
config/: .env.example  aggregators.yaml  config.yaml  dex.yaml  exchanges.yaml  notifications.yaml  risk.yaml  solana_dex.yaml  strategies.yaml  tron_dex.yaml
design_spec/: DEPLOYMENT.md  DESIGN_DOC (1).md  PROJECT_STRUCTURE.md  TECHNICAL_ARCHITECTURE.md
docs/: ETHEREUM_MEMPOOL.md
examples/: decision_engine_demo.py  monitor_all_dexs.py  monitor_dex_cex_arbitrage.py
scripts/: deploy  hetzner.py  logs.py
server-scripts/: monitor-logs.sh
src/: __init__.py  __main__.py  log_buffer.py  main.py  main_integrated.py
src/analytics/: __init__.py  autocorrelation.py  engine.py  fair_value_gap.py  indicators.py  market_profile.py  mean_reversion.py  microstructure.py  multi_timeframe.py  order_flow.py  supply_demand.py
src/config/: __init__.py  loader.py  settings.py
src/core/: base.py  di_container.py  event_bus.py  events.py  simple_events.py
src/decision/: QUICK_REFERENCE.md  README.md  __init__.py  confluence.py  engine.py  signal_pipeline.py
src/decision/analyzers/: __init__.py  base.py  microstructure_analyzer.py  order_flow_analyzer.py
src/decision/filters/: __init__.py  autocorrelation_filter.py  base.py  demand_zone_filter.py  fvg_filter.py  market_profile_filter.py  mean_reversion_filter.py  supply_zone_filter.py
src/execution/: __init__.py  engine.py  order_manager.py  pipeline.py
src/execution/exchanges/: __init__.py  base.py  binance_ccxt.py  exchange_factory.py
src/execution/handlers/: __init__.py  base.py  executor.py  reconciler.py  (+2 more)
src/market_data/: __init__.py  cex_feed.py  dex_feed.py  unified_feed.py
src/notifications/: __init__.py  priority.py  sendgrid_client.py  service.py  templates.py
src/position/: __init__.py  models.py  monitor.py  portfolio_risk_manager.py  reconciliation.py  trailing_stop.py
src/strategies/: base.py  bid_ask_bounce.py  strategy_manager.py
src/trading_engine/: __init__.py  deploy_docker.py  dex_feed.py  main.py  price_feed.py  unified_feed.py
src/utils/: formatters.py  logger.py  math_utils.py  metrics.py  time_utils.py
tests/: simple_notification_test.py  test_analytics_integration.py  test_decision_engine.py  test_execution_engine.py  test_notifications_mock.py
tests/unit/: test_database_manager.py  test_di_container.py  test_event_bus.py
(+65 files in other folders)
