[project]
name = "trading-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MrAlgadros", email = "algadrosinc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "hcloud>=1.35.0",
    "python-dotenv>=1.2.1",
    "web3>=7.14.0",
    "websockets>=15.0.1",
    "aiohttp>=3.13.2",
    "cryptofeed>=2.4.1",
    "pyyaml>=6.0.1",
]

[project.scripts]
start = "main:main"

# Note: Scripts are standalone files in scripts/ directory
# They can be run directly with: python scripts/deploy_docker.py

[tool.uv]
package = true
