[project]
name = "trading-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MrAlgadros", email = "algadrosinc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "hcloud>=1.35.0",
    "python-dotenv>=1.2.1",
    "web3>=7.14.0",
    "websockets==15.0", # Pin to 15.0 for compatibility with solana
    "aiohttp>=3.13.2",
    "cryptofeed>=2.4.1",
    "pyyaml>=6.0.1",
    "solana>=0.36.1,<0.36.7", # Compatible with anchorpy 0.21.0 and websockets 15.0
    "solders>=0.21.0",
    "anchorpy>=0.21.0", # Latest version
    "python-socketio[client]>=5.14.3",
    "tronpy>=0.6.1",
    "grpcio>=1.63.0",
    "grpcio-tools>=1.63.0",
    "protobuf>=5.26.1",
    "base58>=2.1.1",
    "duckdb>=0.9.0",
    "sendgrid>=6.11.0",
    "ccxt>=4.0.0",
]

[project.scripts]
start = "main:main"

# Note: Scripts are standalone files in scripts/ directory
# They can be run directly with: python scripts/deploy_docker.py

[tool.uv]
package = true
