[project]
name = "trading-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MrAlgadros", email = "algadrosinc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # Core framework
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.1",
    
    # Trading & Market Data
    "ccxt>=4.0.0",
    "cryptofeed>=2.4.1",
    "web3>=7.14.0",
    "aiohttp>=3.13.2",
    "websockets==15.0", # Pin to 15.0 for compatibility with solana
    
    # Blockchain Integrations
    "solana>=0.36.1,<0.36.7", # Compatible with anchorpy 0.21.0 and websockets 15.0
    "solders>=0.21.0",
    "anchorpy>=0.21.0", # Latest version
    "tronpy>=0.6.1",
    "base58>=2.1.1",
    
    # gRPC & Communication
    "grpcio>=1.63.0",
    "grpcio-tools>=1.63.0",
    "protobuf>=5.26.1",
    "python-socketio[client]>=5.14.3",
    
    # Analytics & Math
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "pytz>=2023.3",
    
    # Storage & Infrastructure  
    "duckdb>=0.9.0",
    "sendgrid>=6.11.0",
    
    # Cloud (optional)
    "hcloud>=1.35.0",
]

[project.scripts]
start = "main:main"

# Note: Scripts are standalone files in scripts/ directory
# They can be run directly with: python scripts/deploy_docker.py

[tool.uv]
package = true
